# pydictionaria

./: HOWTO.md  README.md  RELEASING.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: getting-started.md  interpreting-the-logs.md  intro-commandline.md  intro-git.md  md-json-properties.md  submission-workflow.md
src/pydictionaria/: __init__.py  __main__.py  cli_util.py  commands.py  concepts.py  example.py  flextext.py  log.py  preprocess_lib.py  scaffold.py  sfm2cldf.py  sfm_lib.py  submission.py  util.py
src/pydictionaria/cldfbench_commands/: release.py  upload_media.py
src/pydictionaria/commands/: add_comparison_meanings.py  check.py  ls.py  new.py  process.py  release.py  upload_media.py
src/pydictionaria/dataset_template/: +prefix+_+id+.py_tmpl  pyproject.toml_tmpl  setup.py_tmpl
src/pydictionaria/dataset_template/.github/workflows/: cldf-validation.yml
src/pydictionaria/dataset_template/etc/: md.json
src/pydictionaria/formats/: __init__.py  base.py  cldf.py  excel.py  filemaker.py  sfm.py  sfm_lib.py
tests/: conftest.py  test_cldfbench_commands.py  test_commands.py  test_concept_mapping.py  test_example.py  test_flextext.py  test_formats_sfm.py  test_sfm2cldf.py  test_sfm_lib.py  test_submission.py  test_util.py
tests/repos/submissions/sub_excel/: dict.xlsx
tests/repos/submissions/sub_sfm/: __init__.py  db.sfm  md.json
tests/repos/submissions/sub_sfm_flex_ref/: db.sfm  md.json
tests/repos/submissions/sub_sfm_with_examples/: db.sfm  md.json
tests/test_data/: db.sfm  intro.md
tests/test_data/sub_sfm/: db.sfm
tests/test_data/sub_sfm_flex_ref/: md.json
tests/test_data/sub_sfm_with_examples/: examples.sfm  intro.md  md.json
tutorials/: getting-started.md  intro-commandline.md  intro-git.md  md-json-properties.md  processing-sfm.md  submission-workflow.md  submitting-sfm.md  working-on-the-commandline.md
